test/golden/deployment.yaml
---
# Source: ld-relay/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ld-relay-test
  namespace: ld-relay-test-ns
  labels:
    app.kubernetes.io/name: ld-relay
    app.kubernetes.io/instance: ld-relay-test
    app.kubernetes.io/version: "8.22.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ld-relay
      app.kubernetes.io/instance: ld-relay-test
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: ld-relay
        app.kubernetes.io/instance: ld-relay-test
    spec:
      volumes:
      - name: ld-relay-test-config
        configMap:
          name: ld-relay-test-config
      
      
      serviceAccountName: ld-relay-test
      containers:
        - name: ld-relay

          env:

          envFrom:
            - configMapRef:
                name: ld-relay-test-config
          securityContext:
            {}
          image: "launchdarkly/ld-relay:8.22.0"
          imagePullPolicy: IfNotPresent
          ports:
              - containerPort: 8030
                protocol: TCP
                name: api
          livenessProbe:
            httpGet:
              path: /status
              port: api
          readinessProbe:
            httpGet:
              path: /status
              port: api
          resources:
            {}
