test/golden/ingress.yaml
---
# Source: ld-relay/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ld-relay-test
  namespace: ld-relay-test-ns
  labels:
    app.kubernetes.io/name: ld-relay
    app.kubernetes.io/instance: ld-relay-test
    app.kubernetes.io/version: "8.22.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "ld-relay.local"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ld-relay-test
                port:
                  number: 8030
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: ld-relay-test
                port:
                  number: 8031
