test/golden/service.yaml
---
# Source: ld-relay/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ld-relay-test
  namespace: ld-relay-test-ns
  labels:
    app.kubernetes.io/name: ld-relay
    app.kubernetes.io/instance: ld-relay-test
    app.kubernetes.io/version: "8.22.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
     - port: 8030
       protocol: TCP
       name: api
       targetPort: 8030
  selector:
    app.kubernetes.io/name: ld-relay
    app.kubernetes.io/instance: ld-relay-test
